# Bitmap

./: .gitignore  CMakeLists.txt
include/Bitmap/: AdditionTransformations.h  Averaging.h  Bitmap.h  BitmapExt.h  Dilatation.h  Erosion.h  Inversion.h  Pixel.h  Transformation.h
src/: AdditionTransformations.cpp  Averaging.cpp  BitmapExt.cpp  Dilatation.cpp  Erosion.cpp  Inversion.cpp  main.cpp
